2005-06-04  Per Bothner  <per@bothner.com>

	* OutPort.java:  Update for AbstractFormat move to gnu.lists.

	* OutPort.java (objectFormat): Change type to AbstractFormat.

2005-05-17  Per Bothner  <per@bothner.com>

	* Location.java (make): Return a ThreadLocation.

2005-05-08  Per Bothner  <per@bothner.com>

	* InheritingEnvironment.java (lookupExtend): Remove method.
	(lookup, getLocation): Remove lookupExtend calls.
	* Future.java (environment): Make public, for GuiConsole.

	* ThreadLocation.java (<init>(String)): Create global local.  This
	provides a default shared local.

2005-05-06  Per Bothner  <per@bothner.com>

	* ThreadLocation.java (ANONYMOUS): New constant.
	(<init>): Take String rather than Symbol.
	(makePrivate): Likewise.
	* InPort.java (inLocation): Update ThreadLocation constructor call.
	* OutPort.java (outLocation, errLocation): Likewise.

	* InheritingEnvironment.java (<init>): Handle the case that parent
	is a plain Environment.
	* Environment.java (make): Don't need to cast parent any more.

2005-04-20  Per Bothner  <per@bothner.com>

	* OutPort.java (outInitial): Make non-private.
	* InPort.java (systemInPort): Use outInitial directly.

2005-04-18  Per Bothner  <per@bothner.com>

	* WrappedException.java (getReflectClass): Update PreProcess names.

2005-04-18  Per Bothner  <per@bothner.com>

	* ThreadLocation.java (threadMap): Make non-static.

2005-04-17  Per Bothner  <per@bothner.com>

	* WrappedException.java: Change JAVA5 dependencies on initCause to
	JAVA4, which is now the default.

2005-04-03  Per Bothner  <per@bothner.com>

	* Procedure.java: Fix javadoc comment.

2005-03-29  Per Bothner  <per@bothner.com>

	* CallContext.java (getEnvironmentRaw, setEnvironmentRaw): New methods.

	* SimpleEnvironment.java (redefinedError): Extend error message.

	* WrappedException.java (<init>): Use to-string to get default message;
	that sems to be more robust, since sometimes message is null.

2005-03-11  Per Bothner  <per@bothner.com>
