@@ -1,3 +1,7 @@
+2005-07-23  Per Bothner  <per@bothner.com>
+
+	* LocationProc.java (setWithSave, setRestore): Remove unused methods.
+
 2005-06-04  Per Bothner  <per@bothner.com>
 
 	* OutPort.java:  Update for AbstractFormat move to gnu.lists.
